# CSC122ShapesLab

./: .gitignore  CMakeLists.txt  Circle.cpp  Circle.h  IsocelesRightTriangle.cpp  IsocelesRightTriangle.h  IsoscelesRightTriangle.cpp  IsoscelesRightTriangle.h  Rectangle.cpp  Rectangle.h  RightTriangle.cpp  RightTriangle.h  Shape.h  Square.cpp  Square.h  main.cpp  test.cpp
